docs(706): session retro — handoff facts, validation commands, preserved patterns, cost-of-time lessons; 4 inbox observations
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>